Thu Oct 27 00:29:11 2005  Gan Deng <gan.deng@vanderbilt.edu>

	* DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
	* DAnCE/NodeApplicationManager/NodeApplicationManager.mpc
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h
	* DAnCE/NodeApplicationManager/Containers_Info_Map.h
	* DAnCE/NodeApplicationManager/ImplementationInfo.h
	* DAnCE/StaticConfigurator/StaticDAnCEParser.mpc

	  Fixed some compilation and linking errors shown on the scoreboard,
	  particularly for Windows builds.

Thu Oct 27 07:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rules.ciao.GNU:
          When cmd is the shell, use a different way to get the CIAO versions
          needed for building with VxWorks 5.5 with Windows as host

Wed Oct 26 23:07:59 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/TypeNameEmitter.cpp:
        * CIDLC/TypeNameEmitter.hpp:

          Added backend support for the frontend features added by
          Boris in

          Tue Oct 25 14:08:44 2005  Boris Kolpackov  <boris@kolpackov.net>.

Wed Oct 26 16:16:32 2005  Nanbor Wang  <nanbor@exothermic.txcorp.com>

	* DAnCE/NodeApplication/NodeApp_Configurator.cpp:
	* DAnCE/NodeApplication/NodeApp_Configurator.h: Updated the
	  NodeApp_Configurator to support pre_orb_initialize and
	  post_orb_initialize methods which will be invoked before and
	  after ORB_init is called.

	* DAnCE/NodeApplication/NodeApplication.cpp: Moved ORB_init into
	  NodeApplication_Core object.

	* DAnCE/NodeApplication/NodeApplication_Core.cpp:
	* DAnCE/NodeApplication/NodeApplication_Core.h:
	* DAnCE/NodeApplication/NodeApplication_Core.inl: Moved the
	  NodeApplication_Options and NoOp_Configurator classes into
	  Configurator_Factory.* file.  Refactored NodeApplication_Core to
	  enable pre_orb_initialize and post_orb_initialize.

	* DAnCE/NodeApplication/Configurator_Factory.cpp: