@@ -1,3 +1,9 @@
+Thu Oct 27 21:06:39 2005  Boris Kolpackov  <boris@kolpackov.net>
+
+	* CCF/CCF/CodeGenerationKit/IndentationCxx.hpp:
+
+	  Added support for indentation of function arguments.
+
 Thu Oct 27 00:29:11 2005  Gan Deng <gan.deng@vanderbilt.edu>
 
 	* DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
